--- a/NETFLIX WEBSITE/NETFLIX/style.css
+++ b/NETFLIX WEBSITE/NETFLIX/style.css
@@ -180,3 +180,53 @@ section.first >div :nth-child(2){
     font-size: 24px;
 
 }
+
+.faq{
+    background-color: black;
+    color: white;
+    padding: 34px;
+    
+}
+
+.faq h2{
+    text-align: center;
+    font-size: 48px;
+    
+}
+
+
+.faqbox:hover{background-color: #414141
+}
+
+.faqbox{
+    color: white;
+    transition: all 1s ease-out;
+    font-size: 24px;
+    display: flex;
+    background-color: #2d2d2d;
+    padding: 24px;
+    margin: 34px auto;
+    max-width: 60vw;
+    justify-content: space-between;
+    cursor: pointer;
+
+}
+
+.faqbox svg{
+    filter: invert(1); 
+}
+
+footer{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    color: white;
+    max-width: 60vw;
+    margin: auto;
+    
+}
+
+.footer-item{
+    display: flex;
+    flex-direction: column;
+    
+}
