--- a/NETFLIX/style.css
+++ b/NETFLIX/style.css
@@ -12,16 +12,26 @@ body {
 
 .main {
     background-image: url(assets/images/bg.jpg);
-    height: 70vh;
+    height: 700px;
     position: relative;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: max(1200px, 100vw);
 }
 
+.main .btn2{
+    border-radius: 4px;
+    background-color: rgba(23, 23, 23, 0.7);
+    border: 1px solid rgba(227, 217, 217, 0.5);
+    color: rgba(23, 23, 23, 0.7);
+    justify-content: center;
+    filter: opacity(1);
+    width: 120px;
+}
+
 .main .box {
     opacity: 0.44;
-    height: 70vh;
+    height: 700px;
     width: 100%;
     background-color: black;
     position: absolute;
@@ -29,7 +39,7 @@ body {
 }
 
 nav {
-    max-width: 60vw;
+    max-width: 80vw;
     justify-content: space-between;
     margin: auto;
     display: flex;
@@ -38,16 +48,20 @@ nav {
 }
 
 nav img {
-    color: red;
-    width: 120px;
+    color: rgb(138, 4, 4);
+    width: 150px;
     position: relative;
     z-index: 10;
+    top: 15px;
 }
 
 nav button {
-    width: 60px;
+    width: 80px;
+    height: 35px;
     position: relative;
     z-index: 10;
+    margin: 7px;
+    top: 15px;
 }
 
 .hero {
@@ -63,9 +77,47 @@ nav button {
     position: relative;
     gap: 23px;
     padding: 0 30px;
+    top: 220px;
 
 
 }
+
+.hero2 {
+    font-family: "Martel Sans", sans-serif;
+    font-family: "Poppins", sans-serif;
+
+    height: calc(100% -60px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: white;
+    position: relative;
+    gap: 23px;
+    padding: 0 30px;
+    top: 0px;
+    height: 250px;
+
+}
+
+.hero2 input{
+    padding: 24px 16px 8px;
+    font-weight: 900;
+    font-size: 12px;
+    border-radius: 4px;
+    background-color: rgba(23, 23, 23, 0.7);
+    border: 1px solid rgba(227, 217, 217, 0.5);
+    color: white;
+    margin: 5px;
+    justify-content: center;
+    flex-direction: column;
+    min-height: 16px;
+    min-width: 16px;
+    text-align: left;
+    width: 332px;
+        
+}
+
 
 .hero> :first-child {
     font-weight: 900;
@@ -102,9 +154,9 @@ nav button {
 }
 
 .btn-red {
-    background-color: red;
+    background-color: rgb(255, 0, 0);
     color: white;
-    padding: 3px 24px;
+    padding: 10px 20px;
     font-size: 24px;
     border-radius: 5px;
     font-weight: 400;
@@ -112,7 +164,7 @@ nav button {
 }
 
 .btn-red-sm {
-    background-color: red;
+    background-color: rgb(240, 5, 5);
     color: white;
 
 }
@@ -143,6 +195,8 @@ nav button {
     margin: auto;
     color: white;
     align-items: center;
+    height: 567px;
+    
 
 }
 
@@ -155,6 +209,27 @@ nav button {
     position: relative;
     z-index: 10;
 
+
+}
+
+.secimgthird{
+    position: relative;
+}
+
+.secimgthird img{
+    max-width: 28vw;
+    position: relative;
+    z-index: 10;
+
+}
+
+.secimgthird video{
+    position: absolute;
+    top: 25px;
+    right: 25px;
+    left: 80px;
+    bottom: 10px;
+    max-width: 17vw;
 
 }
 
@@ -189,12 +264,18 @@ section.first>div :nth-child(2) {
     align-items: center;
     justify-content: center;
     color: white;
+    height: 650px;
 }
 
 .faq h2{
     text-align: center;
     font-size: 45px;
     margin-bottom: 20px;
+}
+
+.hero2 span{
+    text-align: center;
+    font-size: 23px;
 }
 
 .faqbox{
@@ -264,17 +345,23 @@ footer button select
 }
 
 .hero input{
-    padding: 11px 30px;
+    padding: 24px 16px 8px;
     font-weight: 900;
     font-size: 12px;
     border-radius: 4px;
     background-color: rgba(23, 23, 23, 0.7);
     border: 1px solid rgba(227, 217, 217, 0.5);
     color: white;
-    margin: 20px;
-    gap: 10px;
+    margin: 2px;
     justify-content: center;
     flex-direction: column;
+    fill-opacity:(0);
+    min-height: 16px;
+    min-width: 16px;
+    text-align: left;
+    width: 332px;
+    margin:0px;
+        
 }
 
 
