--- a/NETFLIX/style.css
+++ b/NETFLIX/style.css
@@ -19,7 +19,7 @@ body {
     background-size: max(1200px, 100vw);
 }
 
-.main .btn2{
+.main .btn2 {
     border-radius: 4px;
     background-color: rgba(23, 23, 23, 0.7);
     border: 1px solid rgba(227, 217, 217, 0.5);
@@ -100,7 +100,7 @@ nav button {
 
 }
 
-.hero2 input{
+.hero2 input {
     padding: 24px 16px 8px;
     font-weight: 900;
     font-size: 12px;
@@ -115,7 +115,7 @@ nav button {
     min-width: 16px;
     text-align: left;
     width: 332px;
-        
+
 }
 
 
@@ -196,7 +196,7 @@ nav button {
     color: white;
     align-items: center;
     height: 567px;
-    
+
 
 }
 
@@ -212,18 +212,18 @@ nav button {
 
 }
 
-.secimgthird{
+.secimgthird {
     position: relative;
 }
 
-.secimgthird img{
+.secimgthird img {
     max-width: 28vw;
     position: relative;
     z-index: 10;
 
 }
 
-.secimgthird video{
+.secimgthird video {
     position: absolute;
     top: 25px;
     right: 25px;
@@ -257,7 +257,7 @@ section.first>div :nth-child(2) {
 
 }
 
-.faq{
+.faq {
     margin-top: 50px;
     display: flex;
     flex-direction: column;
@@ -267,27 +267,27 @@ section.first>div :nth-child(2) {
     height: 650px;
 }
 
-.faq h2{
+.faq h2 {
     text-align: center;
     font-size: 45px;
     margin-bottom: 20px;
 }
 
-.hero2 span{
+.hero2 span {
     text-align: center;
     font-size: 23px;
 }
 
-.faqbox{
+.faqbox {
     transition: all 500ms ease-in-out;
-  background-color: #2d2d2d;
-  padding: 24px;  
-  width: 70vw;
-  max-width: 70vw;
-  font-size: 24px;
-  display: flex;
-  justify-content: space-between;
-  margin: 3px auto;
+    background-color: #2d2d2d;
+    padding: 24px;
+    width: 70vw;
+    max-width: 70vw;
+    font-size: 24px;
+    display: flex;
+    justify-content: space-between;
+    margin: 3px auto;
 
 }
 
@@ -297,54 +297,53 @@ section.first>div :nth-child(2) {
 }
 
 
-.faqbox:hover{
-    background-color: rgba(147, 138, 138, 0.7);;
+.faqbox:hover {
+    background-color: rgba(147, 138, 138, 0.7);
+    ;
 }
 
-footer{
+footer {
     max-width: 80vw;
     margin: auto;
-    color: rgba(255,255,255,0.7);
+    color: rgba(255, 255, 255, 0.7);
     font-size: 15px;
     font-weight: 400;
     padding: 34px;
 }
 
-footer .question
-{
+footer .question {
     padding: 34px 0px 12px 0px;
 }
 
-footer a{
-    color: rgba(255,255,255,0.7);
+footer a {
+    color: rgba(255, 255, 255, 0.7);
     font-size: 15px;
     font-weight: 400;
 }
 
-.footer{
+.footer {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
-.footer-item{
+.footer-item {
     display: flex;
     flex-direction: column;
 }
 
-footer button select
-{
+footer button select {
     font-size: 15px;
 }
 
-.extra{
+.extra {
     margin-top: 24px;
 }
 
-.extra div{
+.extra div {
     margin-top: 8px;
 }
 
-.hero input{
+.hero input {
     padding: 24px 16px 8px;
     font-weight: 900;
     font-size: 12px;
@@ -355,94 +354,95 @@ footer button select
     margin: 2px;
     justify-content: center;
     flex-direction: column;
-    fill-opacity:(0);
+    fill-opacity: (0);
     min-height: 16px;
     min-width: 16px;
     text-align: left;
     width: 332px;
-    margin:0px;
-        
+    margin: 0px;
+
 }
 
 
 @media screen and (max-width: 1300px) {
-    .first{
+    .first {
         flex-wrap: wrap;
         height: auto;
     }
-    .first > div :first-child{
+
+    .first>div :first-child {
         font-size: 35px;
         font-weight: bolder;
     }
-    
-    .first > div :nth-child(2){
+
+    .first>div :nth-child(2) {
         font-size: 15px;
         font-weight: lighter;
     }
 
-    .secImg img{
+    .secImg img {
         width: 450px;
         position: relative;
         z-index: 10;
     }
-    
-    .secImg video{
+
+    .secImg video {
         position: absolute;
         top: 51px;
         right: 0;
         width: 450px;
     }
 
-    .hero > :nth-child(1){
+    .hero> :nth-child(1) {
         font-size: 32px;
     }
 
-    .hero > :nth-child(2){
+    .hero> :nth-child(2) {
         font-size: 18px;
     }
 
-    .hero > :nth-child(3){
+    .hero> :nth-child(3) {
         font-size: 18px;
     }
 
-    nav{
+    nav {
         max-width: 90vw;
     }
 
-    nav img{
+    nav img {
         width: 120px;
         position: relative;
         z-index: 10;
     }
 
-    nav button{
+    nav button {
         font-size: 15px;
     }
 
-    nav button select{
-        font-size: 15px;    
+    nav button select {
+        font-size: 15px;
     }
 
-    .input{
+    .input {
         flex-direction: column;
     }
 
-    input{
+    input {
         padding-right: 0px;
     }
 
-    .faq h2{
+    .faq h2 {
         font-size: 32px;
     }
 
-    footer{
+    footer {
         max-width: 90vw;
     }
-    
+
 }
 
 @media screen and (max-width: 1300px) {
-    .footer{
+    .footer {
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-gap: 25px;
